# ContractAI-Backend

./: CHANGELOG.md  pyproject.toml
.github/workflows/: version.yml
files/: CONTRATO_ALPHA.md  CONTRATO_BETA.md  CONTRATO_EXTRAIDO.md
scripts/: convert_md.py  extract_md.py
src/: main.py
src/contractai_backend/: factory.py  main.py
src/contractai_backend/core/application/: base.py  validation.py
src/contractai_backend/core/domain/: base.py
src/contractai_backend/core/exceptions/: base.py
src/contractai_backend/core/infrastructure/: base.py
src/contractai_backend/core/interfaces/: base.py
src/contractai_backend/modules/chatbot/: __init__.py
src/contractai_backend/modules/chatbot/api/: __init__.py  dependencies.py  routers.py  schemas.py
src/contractai_backend/modules/chatbot/api/routers/: __init__,py  __init__.py  chat_router.py  conversation_router.py  dependencies.py
src/contractai_backend/modules/chatbot/application/: __init__.py
src/contractai_backend/modules/chatbot/application/interfaces/: llm_provider.py  vector_repo.py
src/contractai_backend/modules/chatbot/application/repositories/: __init__.py  base_conversation.py  base_llm.py  base_relational.py  llm_provider.py  vector_repo.py
src/contractai_backend/modules/chatbot/application/services/: __init__.py  chatbot_service.py  conversation_service.py
src/contractai_backend/modules/chatbot/application/use_cases/: process_message.py
src/contractai_backend/modules/chatbot/domain/: __init__.py  entities.py  exceptions.py
src/contractai_backend/modules/chatbot/infrastructure/: __init__.py  conversation_repo.py  postgres_repo.py  qdrant_repo.py
src/contractai_backend/modules/chatbot/infrastructure/agent/: __init__.py  adapter.py  checkpointer.py  graph.py  llm.py  prompts.py  retriever.py  state.py  tools.py
src/contractai_backend/modules/documents/api/: dependencies.py  routers.py  schemas.py
src/contractai_backend/modules/documents/application/: __init__.py
src/contractai_backend/modules/documents/application/interfaces/: __init__.py  document_repo.py  embedding_provider.py  extractor.py  vector_repo.py
src/contractai_backend/modules/documents/application/repositories/: __init__.py  base_chunk_enricher.py  base_extractor.py  base_relational.py  base_storage.py  base_vectorial.py
src/contractai_backend/modules/documents/application/services/: __init__.py  contract_query_service.py  document_command_policy.py  document_command_service.py  document_query_service.py  document_response_assembler.py  document_service.py  service_catalog_service.py
src/contractai_backend/modules/documents/application/use_cases/: delete_document.py  get_document.py  upload_document.py
src/contractai_backend/modules/documents/domain/: __init__.py  document.py  document_service.py  entities.py  exceptions.py  service.py  value_objs.py
src/contractai_backend/modules/documents/infrastructure/: __init__.py  chunk_metadata_enricher.py  llama_parser.py  model.py  postgres_repo.py  qdrant_repo.py  supabase_repo.py  supabase_storage.py  voyage_embedding.py
src/contractai_backend/modules/integrations/: __init__.py
src/contractai_backend/modules/integrations/api/: __init__.py  dependencies.py  routers.py  schemas.py
src/contractai_backend/modules/integrations/application/: __init__.py
src/contractai_backend/modules/integrations/application/repositories/: __init__.py  base_document_ingestion.py  base_integration.py
src/contractai_backend/modules/integrations/application/services/: integration_service.py
src/contractai_backend/modules/integrations/domain/: __init__.py  exceptions.py
src/contractai_backend/modules/integrations/infrastructure/: __init__.py  document_adapter.py  google_drive_provider.py
src/contractai_backend/modules/notifications/api/: dependencies.py  routers.py  schemas.py
src/contractai_backend/modules/notifications/domain/: __init__.py  value_objs.py
src/contractai_backend/modules/notifications/infrastructure/: gmail_service.py
src/contractai_backend/modules/organizations/api/: __init__.py  dependencies.py  schemas.py
src/contractai_backend/modules/organizations/domain/: entities.py
src/contractai_backend/modules/organizations/infrastructure/: postgres_repo.py
src/contractai_backend/modules/templates/api/: dependencies.py  routers.py  schemas.py
src/contractai_backend/modules/templates/domain/: entities.py
src/contractai_backend/modules/templates/infrastructure/: __init__.py  document_adapter.py  generate_pdf.py  jinja_render.py  organization_adapter.py  postgres_repo.py
src/contractai_backend/modules/users/api/: dependencies.py  schemas.py
src/contractai_backend/modules/users/domain/: entities.py  value_objs.py
src/contractai_backend/modules/users/infrastructure/: jwt_service.py  postgres_repo.py  supabase_repo.py
src/contractai_backend/shared/: config.py  logger.py
src/contractai_backend/shared/api/: __init__.py  error_handlers.py  middlewares.py
src/contractai_backend/shared/api/dependencies/: bearer.py  security.py
src/contractai_backend/shared/database/: __init__.py  postgres.py  qdrant.py
src/contractai_backend/shared/infrastructure/: http.py  secrets_provider.py
src/contractai_backend/shared/infrastructure/database/: postgres.py  qdrant.py
tests/: conftest.py  test_app_setup.py  test_chatbot_prompt.py
tests/documents/api/: test_routers.py
tests/documents/application/: test_document_service.py
tests/documents/domain/: test_entities.py
tests/documents/infrastructure/: test_llama_parser.py  test_postgres_repo.py  test_qdrant_repo.py  test_supabase_storage.py
(+20 files in other folders)
