[project]
name = "contractai-backend"
version = "0.1.0"
description = "Backend para ContractIA - Gestión de Contratos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "azure-keyvault-secrets",
    "azure-identity",
    "pydantic-settings",
    "langchain-google-genai>=4.2.1",
    "sqlmodel",
    "asyncpg",
    "sqlalchemy.ext",
    "llama-parse",
    "qdrant-client",
    "llama-index-vector-stores-qdrant",
    "llama-index-embeddings-openai",
    "python-multipart"
]

[project.scripts]
start = "contractai_backend.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "PL", "B", "W", "ARG", "RUF", "UP", "PTH"]
ignore = ["D104", "D107", "D101", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 5

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"  # Pon aquí tu versión actual
tag_format = "v$version"
version_files = [
    "pyproject.toml:version"
]
